// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`definitions formats a general assumption expression 1`] = `
"module Example {
  const Flag: bool

  assume Holds = Flag
}
"
`;

exports[`definitions formats a parameterless def definition 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`definitions formats a def parameter 1`] = `
"module Example {
  def identity(value) = value
}
"
`;

exports[`definitions formats an ignored def parameter 1`] = `
"module Example {
  pure def ignore(_: int): int = 0
}
"
`;

exports[`definitions formats multiple def parameters 1`] = `
"module Example {
  def choose(left, right) = left
}
"
`;

exports[`definitions preserves a trailing comma in a compact pure def parameter list 1`] = `
"module Example {
  pure def choose(left: int, right: int,): int = left
}
"
`;

exports[`definitions preserves an expanded pure def parameter list without a trailing comma 1`] = `
"module Example {
  pure def choose(
    left: int,
    right: int
  ): int = left
}
"
`;

exports[`definitions formats a typed def header 1`] = `
"module Example {
  def identity(value: int) : int = value
}
"
`;

exports[`definitions preserves source line groups in a hanging definition header 1`] = `
"module Example {
  pure def transfer(chainState: str, denomination: str, amount: int,
      sender: str, receiver: str, sourcePort: str, sourceChannel: str,
      timeoutHeight: int, timeoutTimestamp: int): bool = {
    true
  }
}
"
`;

exports[`definitions preserves source line groups in a hanging definition header 2`] = `
[
  {
    "column": 21,
    "filePath": "multiline-definition-header.qnt",
    "length": 11,
    "line": 3,
    "message": "expected continuation indentation for the parameter line",
    "rule": "format/hanging-parameter-layout",
    "sourceLine": "                    sender: str, receiver: str, sourcePort: str, sourceChannel: str,",
  },
  {
    "column": 21,
    "filePath": "multiline-definition-header.qnt",
    "length": 18,
    "line": 4,
    "message": "expected continuation indentation for the parameter line",
    "rule": "format/hanging-parameter-layout",
    "sourceLine": "                    timeoutHeight: int, timeoutTimestamp: int): bool = {",
  },
]
`;

exports[`definitions formats an untyped parameter with a return type 1`] = `
"module Example {
  def identity(value) : int = value
}
"
`;

exports[`definitions formats List types in a def header 1`] = `
"module Example {
  def identity(xs: List[int]): List[int] = xs
}
"
`;

exports[`definitions removes an optional definition semicolon 1`] = `
"module Example {
  def answer = 42
}
"
`;

exports[`definitions preserves a return type placed below the definition header 1`] = `
"module Example {
  /// Reports whether two values are equal.
  pure def matches(left: int, right: int)
  : bool =
      left == right
}
"
`;

exports[`definitions preserves a return type placed below the definition header 2`] = `
[
  {
    "column": 1,
    "filePath": "misaligned-return-type.qnt",
    "length": 4,
    "line": 4,
    "message": "expected return type on the next aligned line",
    "rule": "format/type-colon-spacing",
    "sourceLine": "    : bool =",
  },
]
`;

exports[`definitions preserves one space before an inline return type 1`] = `
"module Example {
  type Node = Leaf(int) | Internal(int)

  pure def is_leaf(n: Node) : bool =
      match n {
        | Leaf(n) => true
        | Internal(n) => false
      }
}
"
`;
